crates/data-dict/tests/snapshots/validate_spec__s01_fk_no_relationship.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s01-fk-no-relationship.yaml\")"
---
Error: [S01] Every `foreign_key` column must have a matching relationship to a `primary_key`.
    ╭─[ spec/s01-fk-no-relationship.yaml:17:23 ]
    │
  9 │   food:
    │ 
 15 │       - name: food_category_id
    │ 
 17 │         constraints: [foreign_key]
    │                       ─────┬─────  
    │                            ╰─────── is `foreign_key` but no relationship points it at a `primary_key`
────╯
